--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -7,7 +7,7 @@ title: レイアウトに指定したタイトル
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
 		<title>{{ title }}</title>
 	</head>
 	<body>
