タイトル変更

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: 記事タイトル
+title: Myshop
 layout: layout.njk
 csspath: ../css/
 ---
@@ -17,8 +17,8 @@ csspath: ../css/
 		<div class="inner">
 			<div class="nav-wrap">
 				<div class="logo-area">
-<h1 class="logo-txt"><a href="http://localhost:8080/" class="logo">Myshop</a></h1>
-<p class="home-txt"><a href="http://localhost:8080/">HOME</a></p>
+<h1 class="logo-txt"><a href="/" class="logo">Myshop</a></h1>
+<p class="home-txt"><a href="/">HOME</a></p>
 </div>
 <div><img src="./images/cart_icon.png" alt="カートのアイコン" class="cart_icon"></div>
 </div>
