いらない記述の削除、パスの設定修正

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 title: Myshop
 layout: layout.njk
-csspath: ../css/
+csspath: ./css/
 ---
 
 <!DOCTYPE html>
@@ -17,8 +17,8 @@ csspath: ../css/
 		<div class="inner">
 			<div class="nav-wrap">
 				<div class="logo-area">
-<h1 class="logo-txt"><a href="/" class="logo">Myshop</a></h1>
-<p class="home-txt"><a href="/">HOME</a></p>
+<h1 class="logo-txt"><a href="/_site/index.html" class="logo">Myshop</a></h1>
+<p class="home-txt"><a href="/_site/index.html">HOME</a></p>
 </div>
 <div><img src="./images/cart_icon.png" alt="カートのアイコン" class="cart_icon"></div>
 </div>
