--- a/src/product.njk
+++ b/src/product.njk
@@ -1,6 +1,6 @@
 ---
 layout: layout.njk
-csspath: /css/
+csspath: ../../css/
 pagination:
   data: products
   size: 1
@@ -13,15 +13,14 @@ title: Myshop
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 	<header>
 		<div class="inner">
 			<div class="nav-wrap">
 				<div class="logo-area">
-<h1 class="logo-txt"><a href="/" class="logo">Myshop</a></h1>
-<p class="home-txt"><a href="/">HOME</a></p>
+<h1 class="logo-txt"><a href="/_site/index.html" class="logo">Myshop</a></h1>
+<p class="home-txt"><a href="/_site/index.html">HOME</a></p>
 </div>
 <div><img src="/images/cart_icon.png" alt="カートのアイコン" class="cart_icon"></div>
 </div>
